--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --brand: #95c11f;
+  --bgCard: #1e2021;
+  --fgCard: #27282b;
+  --paragraph: #cdcdcd;
+  --menuColor: #19191a;
+  --textColor: #fff;
+}
+
 * {
   margin: 0;
   padding: 0;
-  user-select: none; /* supported by Chrome and Opera */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  text-decoration: none;
+  background-color: var(--bgCard);
 }
