--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,14 @@
   --fgCard: #27282b;
   --paragraph: #cdcdcd;
   --menuColor: #19191a;
-  --textColor: #fff;
+  --textColor: #f1f1f1;
 }
 
 * {
   margin: 0;
   padding: 0;
+}
+body {
+  color: var(--textColor);
   background-color: var(--bgCard);
 }
