--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   --text-primary: #3a3a3a;
   --text-secondary: #cdcdcd;
   --white: #f2f2f2;
+  --white90: #eeeeee;
   --salt: #f26d78;
 }
 
@@ -19,5 +20,5 @@
 }
 body {
   color: var(--textColor);
-  background-color: var(--bgCard);
+  background-color: var(--white);
 }
